fix scrollbar size

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@ body {
 
 ::-webkit-scrollbar
 {
-	width: 12px;
+	width: 8px;
   background: linear-gradient(to bottom, #fda517, #fff12d);
 }
 
